Fix sonar findings
Signed-off-by: Marinov Avgustin <Avgustin.Marinov@bosch.com>